# L3STER

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  main.cpp  temp.txt
.github/workflows/: Tests.yml  ci-workflow.yml  ci.yml
benchmarks/: AssemblyBenchmarks.cpp  BoundaryView.cpp  CMakeLists.txt  Common.hpp  DataPath.h.in  Diffusion3D.hpp  Diffusion3DBenchmark.cpp  Diffusion3DBenchmarkMatrixFree.cpp  ElementBenchmarks.cpp  GlobalAssemblyBenchmarks.cpp  Kernels.hpp  LocalAssemblyBenchmarks.cpp  LocalOperatorEvaluationBenchmarks.cpp  MeshBenchmarks.cpp  SumFactorizationBenchmarks.cpp  UtilBenchmarks.cpp
cmake/: BuildOptions.cmake  Config.cmake.in  DefineL3STERBenchTarget.cmake  DefineL3STERTarget.cmake  DefineL3STERTestTarget.cmake  DefineTrilinosTarget.cmake  DetectCatch2.cmake  DetectDepends.cmake  DetectEigen.cmake  DetectHwloc.cmake  DetectMetis.cmake  DetectParmetis.cmake  DetectTBB.cmake  DetectTrilinos.cmake  GenerateCoverageScript.cmake  HardwareInfo.cmake  ImportLibrary.cmake  MakeL3STERTarget.cmake  MakeL3STERTestTarget.cmake  RegisterMpiTests.cmake
cmake/toolchains/: AddressSanitizer.cmake  Benchmarks.cmake  Coverage.cmake  LeakSanitizer.cmake  StaticAnalysis.cmake  ThreadSanitizer.cmake  UndefinedBehaviorSanitizer.cmake
doc/: Prerequisites.md  class_diagram.uxf  flow.uxf  simulation-structure.uxf
examples/: CMakeLists.txt  README.md
examples/01-hello-world/: CMakeLists.txt  source.cpp
examples/02-advection-2D/: CMakeLists.txt  source.cpp
examples/02-diffusion-2D/: CMakeLists.txt  README.md  source.cpp
examples/03-advection-2D/: CMakeLists.txt  README.md  source.cpp
examples/03-karman-2D/: CMakeLists.txt  README.md  source.cpp
examples/04-periodic-bc/: CMakeLists.txt  README.md  source.cpp
examples/05-static-condensation/: CMakeLists.txt  README.md  source.cpp
examples/06-matrix-free/: CMakeLists.txt  README.md  source.cpp
examples/07-karman-2D/: CMakeLists.txt  README.md  source.cpp
examples/08-native-io/: CMakeLists.txt  README.md  source.cpp
examples/advection-2D/: CMakeLists.txt  README.md  source.cpp
examples/hello-world/: CMakeLists.txt  source.cpp
examples/karman-2D/: CMakeLists.txt  README.md  karman.msh  source.cpp
include/: l3ster.h  l3ster.hpp
include/alloc/: NodeGlobalMemoryResource.hpp
include/basisfun/: ReferenceBasisFunction.hpp  ValueAt.hpp
include/comm/: DeserializeMesh.hpp  DistributeMesh.hpp  MpiComm.hpp  ReceiveMesh.hpp  SendMesh.hpp  SerializeMesh.hpp
include/definitions/: Aliases.hpp  Typedefs.h
include/defs/: Typedefs.h
include/global_resource/: GlobalResource.hpp  HwlocWrapper.hpp  MpiComm.hpp  NodeGlobalResource.hpp  NodeResourceManager.hpp  README.md
include/l3ster/: l3ster.hpp
include/lstr/: l3ster.hpp
include/mapping/: ComputeBasisDerivative.hpp  JacobiMat.hpp  README.md
include/math/: ComputeGaussRule.hpp  ComputeLobattoRuleAbsc.hpp  LagrangeInterpolation.hpp  Legendre.hpp  Lobatto.hpp  LobattoRuleAbsc.hpp  Polynomial.hpp  README.md
include/mesh/: Aliases.hpp  BoundaryElementView.hpp  BoundaryView.hpp  Constants.hpp  ConvertMeshToOrder.hpp  Domain.hpp  Element.hpp  ElementData.hpp  ElementIntersecting.hpp  ElementSideMatching.hpp  ElementTraits.hpp  ElementTypes.hpp  MapReferenceToPhysical.hpp  Mesh.hpp  MeshPartition.hpp  Node.hpp  NodePhysicalLocation.hpp  NodeReferenceLocation.hpp  PartitionMesh.hpp  Point.hpp  README.md  ReadMesh.hpp  Vertex.hpp
include/numa/: HwlocWrapper.hpp  MpiComm.hpp  NodeGlobalResource.hpp  NodeResourceManager.hpp  NumaTopology.hpp  README.md
include/quad/: InvokeQuadrature.hpp  Quadrature.hpp  QuadratureGenerator.hpp  QuadratureTypes.h  README.md  ReferenceQuadrature.hpp  ReferenceQuadratureTraits.hpp
include/quadrature/: Quadrature.hpp  QuadratureGenerator.hpp  ReferenceQuadrature.hpp  ReferenceQuadratureTraits.hpp
include/simstructure/: BCDef.hpp  ConvergenceDef.hpp  EquationDef.hpp  FieldDef.hpp  IOGraphDef.hpp  ParseDefs.hpp  PhysicsDef.hpp  ProblemDef.hpp  SimulationDef.hpp  SubiterDef.hpp  SystemDef.hpp  TimeDef.hpp  Variable.hpp
include/util/: Algorithm.hpp  Common.hpp  Concepts.hpp  ConstevalVector.hpp  ConstexprVector.hpp  HwlocWrapper.hpp  Meta.hpp  MetisUtils.hpp  Polynomial.hpp  README.md
include/utility/: Meta.hpp
sandbox/: CMakeLists.txt  Creator.h  Creator.hpp  Domain.hpp  Element.hpp  ElementTypes.h  ElementTypes.hpp  ElementVector.hpp  Factory.h  Factory.hpp  MeshMaster.hpp  Quadrature.hpp  QuadratureBase.hpp  QuadratureGenerator.hpp  ReferenceElement.hpp  ReferenceElementBase.hpp  Types.h  main.cpp  sandbox.kdev4  sandbox.vcxproj
sandbox/.kdev4/: sandbox.kdev4
sandbox/sandbox/: Element.hpp  ElementTypes.hpp  Factory.h  ReferenceElement.hpp  Singleton.h  Types.h  main.cpp  sandbox.sln  sandbox.vcxproj.filters
scripts/: n_numa_nodes.sh
scripts/ci/: Dockerfile.base  build-and-run-tests.sh  build-examples.sh  entrypoint.sh  tsan_supressions
scripts/cmake/: DefineL3STERTarget.cmake  (+6 more)
tests/: AdvectionPeriodic2D.cpp  AdvectionPeriodic2D.hpp  AdvectionPeriodic2DAssembled.cpp  AdvectionPeriodic2DMF.cpp  CMakeLists.txt  ColumnDofTest.cpp  Common.hpp  DenseGraph.hpp  Diffusion2D.hpp  Diffusion2DAssembledTest.cpp  Diffusion2DMF.cpp  Diffusion2DMFSF.cpp  Diffusion2DTest.cpp  DirichletBCTest.cpp  Dockerfile  DofTests.cpp  EmptyPartitionTest.cpp  GlobalAssemblyComponentsTest.cpp  GlobalAssemblyMPITest.cpp  GlobalAssemblyTest.cpp  GlobalAssemblyTests.cpp  GlobalDofGatherTest.cpp  HwlocTests.cpp  Kernels.hpp  LocalAssemblyTests.cpp  LocalOperatorCommon.hpp  LocalOperatorTests.cpp  MakeRandomVector.hpp  MappingTests.cpp  MathTests.cpp  MatrixFreeTests.cpp  MeshDistributionTest.cpp  MeshDistributionTests.cpp  MeshSendRecvTest.cpp  MeshSerializationTests.cpp  MeshTests.cpp  MpiAsyncCommunicationTest.cpp  MpiBlockingCommunicationTest.cpp  MpiCommTest.cpp  MpiImportExportTest.cpp  (+23 more)
tests/data/: gmesh_ascii2.msh  gmsh_ascii4_cube.msh  gmsh_ascii4_cube_multidom.msh  gmsh_ascii4_square.msh  gmsh_ascii4_square_multidom.msh  gmsh_ascii4_triangle_mesh.msh  gmsh_bin2.msh  gmsh_bin4.msh
(+322 files in other folders)
